# wakfu-items-api

./: .gitignore  README.md  pyproject.toml
notebooks/: test_item.ipynb  uml_schema
scripts/: dynamic_uml.py  extract_all_files.py  generate_database.py
wakfu_items_api/: categories.py  extract_file.py  version.py
wakfu_items_api/database/: __init__.py  actions.py  equipment_item_types.py  item_properties.py  item_types.py  items.py  states.py
wakfu_items_api/parser_schema/: __init__.py  dynamic_uml.py  items.py
