[project]
name = "wakfu_items_api"
version = "0.1.0"
description = ""
authors = [{ name = "Ash", email = "lehodey.jules@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["requests", "pydantic", "sqlalchemy"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
extract-all-files = "scripts.extract_all_files:extract_all_files"

[tool.poetry.group.dev.dependencies]
graphviz = "*"
